# ChangeLog for sys-power/apcupsd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/apcupsd/ChangeLog,v 1.86 2013/10/19 21:26:36 pacho Exp $

  19 Oct 2013; Pacho Ramos <pacho@gentoo.org> apcupsd-3.14.8-r2.ebuild:
  amd64 stable, bug #485344

*apcupsd-3.14.10-r3 (15 Oct 2013)

  15 Oct 2013; Matthew Marlowe <mattm@gentoo.org> +apcupsd-3.14.10-r3.ebuild,
  +files/apcupsd.conf, +files/apcupsd.init.4:
  First in several revisions to the apcupsd ebuild, finally starting to get it
  back in shape - non keyworded during testing.

*apcupsd-3.14.8-r2 (28 Sep 2013)

  28 Sep 2013; Pacho Ramos <pacho@gentoo.org> +apcupsd-3.14.8-r2.ebuild:
  Backport unit files to allow faster stabilization

*apcupsd-3.14.10-r2 (31 Aug 2013)

  31 Aug 2013; Pacho Ramos <pacho@gentoo.org> +apcupsd-3.14.10-r2.ebuild,
  +files/apcupsd-tmpfiles.conf, +files/apcupsd.service:
  Add unit file (#480298 by Billy DeVincentis)

  26 Mar 2013; Mike Gilbert <floppym@gentoo.org> apcupsd-3.14.10-r1.ebuild:
  Use udev.eclass for udev rules installation.

  16 Oct 2012; Markus Meier <maekke@gentoo.org> apcupsd-3.14.10-r1.ebuild:
  add ~arm, bug #433657

  11 Jul 2012; Matthew Marlowe <mattm@gentoo.org> metadata.xml:
  Updated metadata to reflect taking over maintenance of package.

  08 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Drop myself out of metadata.

  16 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> -apcupsd-3.14.10.ebuild,
  -files/apcupsd.init.2:
  Remove old version.

*apcupsd-3.14.10-r1 (21 Oct 2011)

  21 Oct 2011; Diego E. Pettenò <flameeyes@gentoo.org> -apcupsd-3.14.7.ebuild,
  -apcupsd-3.14.9-r1.ebuild, +apcupsd-3.14.10-r1.ebuild, +files/apcupsd.init.3:
  Simplify init script with the new declarative runscript.

  20 Oct 2011; Brent Baude <ranger@gentoo.org> apcupsd-3.14.8-r1.ebuild:
  Marking apcupsd-3.14.8-r1 ppc for bug 363087

*apcupsd-3.14.10 (29 Sep 2011)
