@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst prepare setup
-DEPEND=cgi? ( >=media-libs/gd-1.8.4 ) nls? ( sys-devel/gettext ) snmp? ( net-analyzer/net-snmp ) gnome? ( >=x11-libs/gtk+-2.4.0:2 dev-libs/glib:2 >=gnome-base/gconf-2.0 ) virtual/pkgconfig virtual/pkgconfig
+DEPEND=|| ( >=sys-apps/util-linux-2.23[tty-helpers(-)] <=sys-apps/sysvinit-2.88-r4 ) cgi? ( >=media-libs/gd-1.8.4 ) nls? ( sys-devel/gettext ) snmp? ( net-analyzer/net-snmp ) gnome? ( >=x11-libs/gtk+-2.4.0:2 dev-libs/glib:2 >=gnome-base/gconf-2.0 ) virtual/pkgconfig virtual/pkgconfig
 DESCRIPTION=APC UPS daemon with integrated tcp/ip remote shutdown
 EAPI=4
 HOMEPAGE=http://www.apcupsd.org/
 IUSE=snmp +usb cgi nls gnome kernel_linux systemd
 LICENSE=GPL-2
-RDEPEND=cgi? ( >=media-libs/gd-1.8.4 ) nls? ( sys-devel/gettext ) snmp? ( net-analyzer/net-snmp ) gnome? ( >=x11-libs/gtk+-2.4.0:2 dev-libs/glib:2 >=gnome-base/gconf-2.0 ) sys-apps/openrc virtual/mailx
+RDEPEND=|| ( >=sys-apps/util-linux-2.23[tty-helpers(-)] <=sys-apps/sysvinit-2.88-r4 ) cgi? ( >=media-libs/gd-1.8.4 ) nls? ( sys-devel/gettext ) snmp? ( net-analyzer/net-snmp ) gnome? ( >=x11-libs/gtk+-2.4.0:2 dev-libs/glib:2 >=gnome-base/gconf-2.0 ) sys-apps/openrc virtual/mailx
 SLOT=0
 SRC_URI=mirror://sourceforge/apcupsd/apcupsd-3.14.10.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	udev	a9a8d051efb42bfe884c1db82ce161de	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=2670e34fd7691e3894abc7b84b0f2e32
+_md5_=14985619603709c6f5d769b46187b82f
