@@ -9,6 +9,6 @@ LICENSE=GPL-2 BSD
 RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-python/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/pygobject:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/pygtk:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcomposite x11-libs/libXdamage x11-libs/libXfixes x11-libs/libXrandr x11-libs/libXtst csc? ( || ( >=media-video/ffmpeg-1.2.2 media-video/libav ) ) dec_av? ( || ( >=media-video/ffmpeg-1.2.2 media-video/libav ) ) opengl? ( dev-python/pygtkglext ) pulseaudio? ( media-sound/pulseaudio ) sound? ( media-libs/gstreamer media-libs/gst-plugins-base dev-python/gst-python ) vpx? ( media-libs/libvpx virtual/ffmpeg ) webp? ( media-libs/libwebp ) x264? ( media-libs/x264 || ( >=media-video/ffmpeg-1.0.4:0 media-video/libav ) ) dev-python/dbus-python[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/ipython[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/numpy[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] virtual/ssh x11-apps/setxkbmap x11-apps/xmodmap server? ( x11-base/xorg-server[-minimal,xvfb] x11-drivers/xf86-input-void x11-drivers/xf86-video-dummy ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-python/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 ) clipboard? ( || ( server client ) ) opengl? ( client ) || ( client server ) || ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
-SRC_URI=http://xpra.org/src/xpra-0.10.2.tar.bz2
+SRC_URI=http://xpra.org/src/xpra-0.10.6.tar.bz2
 _eclasses_=distutils-r1	ebca16ab3836a4a53197539bdeac9f2c	eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	python-r1	3baffd4f94003161708508813a475647	python-utils-r1	4f3595fa07cbecf9f3cfabd0f9a6f34b	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=12744e48acdb76152cc29d63f8e63081
+_md5_=d2e38a27c30f9926e63fe8d63d316715
