@@ -14,15 +14,15 @@ DIST apcupsd-3.14.10.tar.gz 1336852 SHA256 0707b5ec9916fbde9e44eb8d18037c8d8f75d
 DIST apcupsd-3.14.8.tar.gz 1317601 SHA256 8e7f2574d3abaf6637da3e790860c3f9ba64fab1ec7e50bb080de4439441c5a7 SHA512 07e6a15538bf1824b5063a1a93f33231639cf962e658c0dada1b244f2554af81824825d807ea81fd0388e25ed8fac0957621bfded96e3faeb7b594548fc4d418 WHIRLPOOL e5a580afc4955a373f020cb6e4ccbf07f9f020d4c15eaae59b416499c25a00b9d4bbc6af012bd2529024e8a3668a1d7c47f19f1bcb99f5ba60dc0108fa13c4f2
 EBUILD apcupsd-3.14.10-r1.ebuild 4060 SHA256 8bd603ca14f6e42a573559d8588354240f74a4eff4b4cab7d62f460320e06fd8 SHA512 6b37efe12be278bce4b6bf7a17c88641bfe13c8304c383112a3309fca33609ca9d02ede3b6c23ed325064878da6e4c8f441ad39e92e68d791fd6348c228f0ca3 WHIRLPOOL 470e178eff2d7e1dcdc19e1860396dd9ca494f10d6e15ab60a9635b763b0f60192a883bec5a5c60ccc00fc3f48aa0035117804384d03d17b8e1cc23be949d579
 EBUILD apcupsd-3.14.10-r2.ebuild 4177 SHA256 3ee47fde9a2f7be55208b2f2bbe88fe1cdf57c21783486195e7a904d476bf680 SHA512 af68e532b23719323a88e61e222eb48b5502d022d6d1ea21d56352edbe5cfeeb844b483d77c451940b6eb01c713bcc206b4365369bda7082794cdc327b2e3d0e WHIRLPOOL 54c92f7dffea8841af85867173c36cd361732a0e4ef90f3020c5e2ed7a8078eb2e1157441c2510b234cb7fdb04ee4b36b29dfb296d9227ebe8aa1bc968015599
-EBUILD apcupsd-3.14.10-r3.ebuild 4027 SHA256 7910890087593582abb052a8f92d3bcc900b1b1fff1da13cfcf0fc75d2c72e61 SHA512 71abbf7148bca5d0fa9cda5553636e6041a50cb6f8361c246fbc487f0f07b7fcfa0e2197560f8162392a57ac6f86fe8254dbda982370ee80e8f0840486f120ec WHIRLPOOL 37fc380f86218161e8a638a023b12cd2f998a5764986d27421bc44f4a1117f7969ebee736246cca3a81888d28df3a58145dec44bc2547ccdfcb216ae7ea095da
+EBUILD apcupsd-3.14.10-r4.ebuild 4114 SHA256 5ecdb6f31dafdfed58c9b4a13d55fca0190c63e28a9441bffc013862cefc7bf7 SHA512 18d6c6e5661e1ad4f6054c7af36080d0112215d3cb38fc2d0b02aebbe30c88751798637b4d880d3214da7c70b00849d021a69ba6dd6b77bcc69e8396288bcf1c WHIRLPOOL 91f972a1f3fa5c62c705b48eb241a3fd4bfa5a9d4a5127abd4ccaf034ac351da59b2b05c06151c864eb9d9f9f6294639f13405fcaf7c9714e980a9e5ed571e4f
 EBUILD apcupsd-3.14.8-r1.ebuild 3863 SHA256 f5d984daecd4a0af67bdd5c44abeea7a4f47ed6ee94623e64e89116ff77e83b5 SHA512 5abc26eb6a258f39d7b4a617e87ee00a51c23aaeff76edd9fbc5a7b898552c5e1a270acd941d7e4d5818184d807e986da0593c239f6945c8d652867966197220 WHIRLPOOL 6ef00f538fdd0da2ac2639ece9e3209ba87190032c650cb003e7358e9f8e66f5255f58bacd0a59a7a16f17f2c393af4fb23eba14af403289444fc18d5b0140d4
 EBUILD apcupsd-3.14.8-r2.ebuild 3971 SHA256 a7af0acd9407a8cf3cc2fd63ed2cd5da9383851a4f10468172b7a36ab5c4e1a4 SHA512 3b9d84a81201082b2bb414eb636b4dffda717644bfbaf55b8a44c2e56443819396669b11d04688c0728a225b7c8fc4bac5295d885d1aa41cc5e6fbb52188019b WHIRLPOOL 0c3d429d30c668cec53617b208b1c18327e24788d0fb9ba936ba925ac2a496170c9ab0bae3570fdc8eed0c859585942f417d3c8e3064bc23e0da521c4cee4249
-MISC ChangeLog 27390 SHA256 c93c7c880b921906eeb17e421e6893d3cadc3ba1f18383368026c9973ee145a6 SHA512 89cd0c5e2aa9849931768b94013cba2a3fe1f8c5dfc671a27a2cd039b7276473a3321c7df02a63aea4af1f82b9ca81db9a9b39f3d9bb3ffc845985f58f1995eb WHIRLPOOL 6cdab6546274a8fb9fedcb9f4acd784f3fbdde913eeec721bf2772d19cb444fe307efb72c0bd08b3e1c1c6efc2d65c994cbffc7f59ca200b5db1a099fadf5ab5
+MISC ChangeLog 27694 SHA256 02b853ebbb55742be788fc5e13a120a6d8b67279c209a35f1ac379d9748a0571 SHA512 21ae0388e923459a78c6c117ecd0742befff5fe39c1a5c51374b360227fa011df2b155b684678dfce9005989289e377fcb77a49fa6c007ac9759fd87ac57bb30 WHIRLPOOL d56b23b20b66d450d6517bd5cd2e3dad8b0388cfd6cd198d9c17ec8b391ef23cbccd03ce9f699dd25a09439b13e505e4c636745449b3e8bdc50e927d7355fb4a
 MISC metadata.xml 854 SHA256 ed821e0f70dad05d8ec1475d40654bb39a4d4ce0e9afb3901282dd05a3662cc5 SHA512 b3d9dbbb217711502dc36e1aca3c6efb18eb31a1f375241ed12a5e1312e19fd74e3659bb9bab3afd9eeff41de7f643a367a406bab09a1bce9d7f41b5e28da988 WHIRLPOOL 7ed63a7e8f4560fccc24d664e6d43c0a9b726b7c41cb1504753869633611968d3d4d29403b07dd0c17e40c8e368b01450d36cf44215906843ff70d505bd0fb7c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJi+Q0ACgkQCaWpQKGI+9TsfwCgh8F+qNCdGNpKDQAWB4nh910C
-XwkAniYlwHLHnWpCorKn2ClREbH5n25d
-=SwNQ
+iF4EAREIAAYFAlJlmLEACgkQC77qH+pIQ6T8lgD/YyfrnphGHEm3Mk2DcPMoHQLQ
+S7OjO1zSFqno8oJZns4A/i1bzgr2ItrvsDfrL0722buRXWrmd2+6mKisrO1kqRfn
+=WF7t
 -----END PGP SIGNATURE-----
