@@ -7,22 +7,22 @@ AUX xpra-0.7.4-prefix.patch 478 SHA256 3a3e1914a82c71050891a31aad14360666c73bbc6
 AUX xpra-0.8.0-prefix.patch 463 SHA256 5c05c47154751e68ea91a3988d17baa06a027370bddaf857f269cc2a0cabde77 SHA512 a18b61923f2ffc34a1a17de20705bee587804e3ed597c6092495f513e061255b0c412873b3c01a849c1fc19ca82a2b4aa95dc9add4e971a9e922074f6abcf0a2 WHIRLPOOL 64471baa063b0a1355b7c110be5f9febe9beaa8416377c98f418e2cf0ad14ecaf37267d3bf1175b0197ee38ecd15dec1da7953415d9818bc2d86fee99334ea56
 AUX xpra-0.9.5-PIL.patch 4196 SHA256 8e3e9a52a3f2b4721b8980768fbac47c13493631fa6245bba873837f2e23969c SHA512 a247b14526d59e9b10c2ce27545e71f149dec9bc45c50b50840e7ddc524aaca0e25b6e322e55a90992626c2fc1eaf161d70f69a491f62afbee3372212ce70b34 WHIRLPOOL ab14c618adb6b1de786f9cc8d794d8074466bbc77065b65a75281dfb4058a22e948851dfd3587847511bebf412e05780183f68b154545974d9c4bde0606901c3
 AUX xpra-0.9.5-opengl-auto.patch 2168 SHA256 69c20c7557af0b4ab532ae505307ef2c28965e66df03a5f9ce91b9015b707a05 SHA512 72f3d5919802d90bec63f9ab927c19a896b5e17d322832bf130b1b8202452e796b93c653cc0c7293a8e1c535e28738cc0d1b21891d5c788f222e4e79265bf910 WHIRLPOOL ef90c6ca9188e8a647987a685d8aecce895bc36addc90240536929fc9bbf22332fbccb14a4a5309e389eab5b2924009c397973d9d09101d8854e19ebec435e8f
-DIST xpra-0.10.2.tar.bz2 679164 SHA256 4bacfa4ed375904dd4827cd953146cb6e9c7359869b6cfed0ebce806ea3a4829 SHA512 f78d6959710b47e4756af8254ac93819681b360b8a2fa599bc1c7aa7ce95dc5ad75fde906a8e6fba26ebec522cbd47be818a05ace96b0989c26edd7bd142756e WHIRLPOOL a4625a18868df8ed2cef7892552180776ca0bdf45d1c4c05e6a1309d5f70a512c92caa97f57181fa8dd7616f70de6e86819c06ea789ca75d7ff49e542fb0dfab
 DIST xpra-0.10.4.tar.bz2 679676 SHA256 dfbe357938790e68a54aee1d7e84e4c82394a9e2e5d9d5b88acbf70b6eac7bed SHA512 f567571cb7d8c73a1bd7a0ebfb3c2b779fe0b6551bb61651ecc736453fce8c2ff76111e8a01d1c01e5ec7293c2be53d3fc1c2c360514e5cfcdcb9871cbe56024 WHIRLPOOL aac715c1c1365de47fd8414fd3d68d42b91469f50e99837a96afc0cd87a056b9c93ca1f6844286e46d1d705bdbe8639bf29bc6d6cc3e873fad9c89dd07fc19d7
+DIST xpra-0.10.6.tar.bz2 679774 SHA256 e1a5fbf4d328300898a2eaa299a6337ce2e4e21524aa3c24c5d82a9c8f7e3776 SHA512 0ff593e91afaa0eb3b0148c6caedc6617872b20ce19b1eedb1ec82851713d848406c9076cca7f0c20a6c3246ddf3e813e7c4604b25e685462a37c79b75f9442b WHIRLPOOL 4a7d574930df7c2cbb0e5f6112b185f544632c6b06290aa799f0eee958d628bb9eb19b83add9ce8f43e5bd64db3d723ae2214ea86cb806b2af9fa249b75a73e0
 DIST xpra-0.7.8.tar.bz2 471147 SHA256 27f5d0bc2a369a93076ef90fad46a6354e0327033b9139b659d602e9e32c17cb SHA512 d14fdd75c7fd494f4aaae8740ce1a5a7880ae70109ffa7989d346d1b5add56a8117a5851132140f2e8a3aad0f7f3f4a9fe6e2b2f3e9666e469f35fc179fd0af2 WHIRLPOOL c0ed83f90ade9b3a7b0ab728ab090d73277fecb56edc4943295fa19f211b3e41c12dcad6eec9b01932c0a2bb1a6402f8f88deaf25c7f88be01fcf986778c4fd0
 DIST xpra-0.8.8.tar.bz2 581029 SHA256 248bac50c78eccfbc7f728667f9d0ef26b101b288193fa286881cda452e63683 SHA512 b3d2121c13e293cca466997af1b49069ced0012c6692cfac375e9990d62efc916b44f2641a4e9c5e04e425d19c14e85e1521ae1832aa3ea02fcc46ac29672a63 WHIRLPOOL b1f654542e8e89ce89ffb6fac9ee3a42f0c88e6d9ce0fdc1573b28c0b117e970f7e96484eadf7552c35e6dd3064f37495a4eb2cdb1c51c2dc0a8ded8877ba321
 DIST xpra-0.9.8.tar.bz2 607316 SHA256 6c33f2da404209158a4684d26365bac56c77d3f158b95710a482e3a813178884 SHA512 324eeb09a2f948ded76a6cb53180ee68dedbce1c9f11736475e43551f9f27cb09949f1f8c1cdc1f5eb5000070a73e58593fac74d7ca3e24d2ddbc69bdf57d70e WHIRLPOOL 77dc3f3e27e1914d4691eb08247d1025a42d438167db178e59a3befdab44c8c02618f46968f5805af886aafb0129c1461a4843cd753f79d10e4bd9c4a07eeb9a
-EBUILD xpra-0.10.2.ebuild 2831 SHA256 4775f547f81f7aba2c8ed0b346dd73a71aa78f2e5997209436520f48a0facba4 SHA512 9393f60ee5455fbea2676235e8a2c516a90592f26a0fa190b175dcd3908d4ed12568e08c83a3d07d9dcbdb691ec00133b1c68a32660015f60c55b98985b41bd0 WHIRLPOOL 5fd0b3b0ca03b0ebe0e7f70b90f2cbe791faf87f992efd2c3c1d254a357688fefaacc23e7f6febde98e4d403960ac5044ab2c7ba6148763319d026f5f2a9c166
 EBUILD xpra-0.10.4.ebuild 2831 SHA256 e958ee76ec8227702bfc9c5c409471302fe7e4417952ab09e82bd1bb107d91da SHA512 170c1e47a01790b9cc697210dc27e5210a8cf30eb92073e8f62cf239d9c5abb8599a6227e0653e0c553ae25c2aabaf835741d61e01f03d7a58e629ae240917ad WHIRLPOOL 486deaadec49b93d9ef3370ae3e4aafe87eec0a17a73829c657593dd7ded97120c996e893bde6ee5c0eadfc88dd0a5de5813ee563f1fd16f2d836b58c1e607aa
+EBUILD xpra-0.10.6.ebuild 2831 SHA256 fb17ea1d88f83ce2f6805f090706bf5696d9869b87196a6515e5fe074ea82498 SHA512 062556e09bcccf05d75443b7ee86716c3e5fa95bf81c1b43178bfc5b9c9a57c7648a2c88589c18191741c4c82c68203953aa2f4fdf25e1bbae7888ec0e55017f WHIRLPOOL ce09ea620cacaf144a5abc8d99e0ee39bee4e85d8beaa96a24708c594bb69891808d274f34580f83be8cb7d8e1442ae1eb1ea8c9594dfc0a427549706020f40c
 EBUILD xpra-0.7.8.ebuild 2520 SHA256 be7b5830ac406d6021ae56feee6549bf1e78f3623109c55d95b55b284bd2fbf3 SHA512 9a94a50c0e4f111e333b4545dbcbfd7b54e24e132e40bf57ab9aab881ea2e45127df71f84341fa5eed8e0aef1a6395861759881e537c97586ff9783c664f9838 WHIRLPOOL 1d00d061266bbd8935d37403a470a863af628127fe23b96ab258ab5595c0e9ad28bc7d7f3f011583b211c3758e320ce6c3c9f2f81e3a7424a753620f841769f5
 EBUILD xpra-0.8.8.ebuild 2257 SHA256 c7104143884d38acf3570af333ed58434846c889b4cc0f4810638ef54c24ac29 SHA512 983b7c148c2adf455482243efc9b771fe0154682f842ad0d793e9c0dfc36e2238df08e12581e5ad27140b58c06cd37e8d581dfef41b37ff42a5ecb343f8cfabf WHIRLPOOL 8ab3dcefad02cbb0014d72c49660769431b93d36c30215bc38e0ea4d6b544f9e2538da4b108948ffddc0cfa08660061da58e61a6c0cecb9ed86884ae79019361
 EBUILD xpra-0.9.8.ebuild 2646 SHA256 d56daad0cdd0ca7a07c98058e95e4a3f447e3866f9af6346782f7062285d6180 SHA512 b768650888ccbf9cbf2f6a2f5bb6e1bcab350d0111e33b178cca75fe80a0bd264ff1abbc1767d573ea0cc93edff6929a2db656360183a15d0618266c379dac49 WHIRLPOOL a57eb703e69b601e4e00506c9fb5cec605879dfa93c8b2b5d91c12f5c1f4dc6ae3b943e3551b44e92d178b264187748c38c09bd0cc8e3baa5010026011eac4e7
-MISC ChangeLog 12163 SHA256 1d8e4fe4fe68f88b4373dcc27dc64f4024ce48bb06dc69845f0920819a45a984 SHA512 6ba7d276fb4dea0b85c06320bc3b9eaed8c62ec0035900a314dba8e7252846fd35d50cd6f39afc3f94d9b42da44b2234d856e3985a81c9ebea26f152abedf8ce WHIRLPOOL a931c5f98f482f5141db1b06ea001c23152064cd2c688ab7808fe5d454a9bf801ef94bdae248c7d5b83e2f21ea395d10cb9e0851f92f6658685f7834239fe1a6
+MISC ChangeLog 12308 SHA256 d43cb3ecfec36606171c84b9139c7cc5d3463dc87e90327ace8fc018963c83e3 SHA512 84e960671fd80f6a8f9d04ae939a6edfeefe3941eafb26d1e06e2a1cf22dd5a5c3a8a1eff4c1d951c227195f8586c2b84e29a2d949cb2869006b9696711b4c34 WHIRLPOOL c97257b9bd9f116483235fcfee2cda6f200b1f736f3e2c22ee56c42d553662ce0100aa5cc83984fb56842e4e94f398958cd43f3ced581f715f90af54a6afcb4d
 MISC metadata.xml 750 SHA256 520a2fa41f7d77740b88be12b182f4eb4bbd38b2e8fcbc7e3b6fee104febe4d6 SHA512 3a8bcebe6a9c51100166601bdbdfab2cd67c455ef1f549ce3014dd2a17109273ba7849bdf70ae2077d48cb957b2f7a27e9d6213017fec6db6a5ef509985d8281 WHIRLPOOL cfd580b41e3eec89c58a7b6da0788b61906f91dd673eccd2b9b0219edbb328780cd6294958fb68f52e0dfffdf52c60d9454dd02dfd996644b9b2e2ca3014edd0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlJCJosACgkQknrdDGLu8JB8oQEAgFa+YGt6gXlCXW+HSmEDnGaw
-Gu6F9aPPbyKt2GyoD6cA/jIBKFCnQ1xLeMV/9FpoW/JDvrzHP9rNuExDCSXlE9jG
-=Pc/G
+iF4EAREIAAYFAlJlmqsACgkQknrdDGLu8JAjBQD+KkR8zaHmKlJPnN4ErXlTB0NS
+1Y88LPP5Tq1j/oL8jyABAJrAm0DQpIjVyEM+b6i9ih7csVMZyRKYE9xaMa1ycKeq
+=t8gW
 -----END PGP SIGNATURE-----
