@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/xpra-0.10.2.ebuild,v 1.1 2013/09/04 07:27:43 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/xpra-0.10.6.ebuild,v 1.1 2013/10/21 21:17:09 xmw Exp $
 
 EAPI=5
 
