@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/xpra
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.83 2013/09/24 23:55:48 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.85 2013/10/21 21:20:42 xmw Exp $
+
+*xpra-0.10.6 (21 Oct 2013)
+
+  21 Oct 2013; Michael Weber <xmw@gentoo.org> +xpra-0.10.6.ebuild,
+  -xpra-0.10.2.ebuild:
+  Version bump, drop old.
 
 *xpra-0.10.4 (24 Sep 2013)
 
