@@ -1,6 +1,15 @@
 # ChangeLog for sys-power/apcupsd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/apcupsd/ChangeLog,v 1.86 2013/10/19 21:26:36 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/apcupsd/ChangeLog,v 1.88 2013/10/21 21:12:15 floppym Exp $
+
+  21 Oct 2013; Mike Gilbert <floppym@gentoo.org> apcupsd-3.14.10-r4.ebuild:
+  Fix util-linux dep.
+
+*apcupsd-3.14.10-r4 (21 Oct 2013)
+
+  21 Oct 2013; Matthew Marlowe <mattm@gentoo.org> +apcupsd-3.14.10-r4.ebuild,
+  -apcupsd-3.14.10-r3.ebuild:
+  Bug 488306, missing dependency for /usr/bin/wall binary.
 
   19 Oct 2013; Pacho Ramos <pacho@gentoo.org> apcupsd-3.14.8-r2.ebuild:
   amd64 stable, bug #485344
